--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="cabecera">
-        <img src="keyboardMaster.png" class="logo" alt="logo de la KeyboardMater">
+        <img src="KeyboardMaster.png" class="logo" alt="logo de la KeyboardMater">
         <h2>Tipea tan rapido como puedas</h2> 
     </header>
     <main>
