--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="cabecera">
-        <img src="keyboardMaster.png" class="logo" alt="logo de la KeyboardMater">
+        <img src="Logo.png" class="logo" alt="logo de la KeyboardMater">
         <h2>Tipea tan rapido como puedas</h2> 
     </header>
     <main>
@@ -43,7 +43,7 @@
           
     </div>
     </main>
-    <footer class="footer"><span class="footer-msg">Design by Catriel Pardo. All right's reserved.</span>
+    <footer class="footer"><span class="footer-msg">Design by Catriel Pardo</span>
         <a href="https://www.linkedin.com/in/catriel-pardo-a92bb7245/" target="_blank"><img class="linkedin" src="linked.png" alt=""></a>
         <a href="https://github.com/cartup90/" target="_blank"><img class="github" src="github.png" alt=""></a>
 </footer>
