--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="cabecera">
-        <img src="Logo.png" class="logo" alt="logo de la KeyboardMater">
+        <img src="Logo.png" class="logo slide-in-blurred-top" alt="logo de la KeyboardMater">
         <h2>Tipea tan rapido como puedas</h2> 
     </header>
     <main>
@@ -28,10 +28,10 @@
         </div>   
         <div class="opciones ">
                 <h2 class="texto-inicio">Pulsa el boton para iniciar</h2>
-                <button id="start" class="iniciar css-button-retro--sand">Iniciar</button>
+                <button id="start" class="iniciar shake">Iniciar</button>
                 <div class="segundos">
-                    <button class="veinteSec selected">20"</button>
-                    <button class="cuarentaSec">40"</button>
+                    <button class="veinteSec selected flipUp-360">20"</button>
+                    <button class="cuarentaSec flipUp-360">40"</button>
                 </div>
         </div>
         <div class="resultado oculto"><br><br><br>
